Branchename fix in workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Demo website
 on:
   push:
     branches:
-      - develop
+      - development
 jobs:
   build:
     runs-on: ubuntu-latest
